crates/lang-parse/tests/snapshots/parser__parser_list binary ops.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x1c1524e39df969c9",
        output_hash: "0x75c64de97fa5fda5",
        tree: (
            span: (
                start: 0,
                end: 17,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 17,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 17,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: BinaryOperation((
                        span: (
                            start: 0,
                            end: 17,
                        ),
                        lhs: List((
                            span: (
                                start: 0,
                                end: 6,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            items: [
                                (
                                    span: (
                                        start: 1,
                                        end: 2,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: Literal((
                                        span: (
                                            start: 1,
                                            end: 2,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 1,
                                                end: 2,
                                            ),
                                            value: "1",
                                        )),
                                    )),
                                ),
                                (
                                    span: (
                                        start: 3,
                                        end: 4,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: Literal((
                                        span: (
                                            start: 3,
                                            end: 4,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 3,
                                                end: 4,
                                            ),
                                            value: "2",
                                        )),
                                    )),
                                ),
                            ],
                            unit: Some((
                                span: (
                                    start: 5,
                                    end: 6,
                                ),
                                name: "\"",
                            )),
                        )),
                        op: (
                            span: (
                                start: 7,
                                end: 9,
                            ),
                            value: Equal,
                        ),
                        rhs: List((
                            span: (
                                start: 10,
                                end: 17,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            items: [
                                (
                                    span: (
                                        start: 11,
                                        end: 12,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: Literal((
                                        span: (
                                            start: 11,
                                            end: 12,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 11,
                                                end: 12,
                                            ),
                                            value: "1",
                                        )),
                                    )),
                                ),
                                (
                                    span: (
                                        start: 13,
                                        end: 14,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: Literal((
                                        span: (
                                            start: 13,
                                            end: 14,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 13,
                                                end: 14,
                                            ),
                                            value: "2",
                                        )),
                                    )),
                                ),
                            ],
                            unit: Some((
                                span: (
                                    start: 15,
                                    end: 17,
                                ),
                                name: "cm",
                            )),
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
