crates/lang-parse/tests/snapshots/parser__parser_list units.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x74eec0410e99245f",
        output_hash: "0x53713c0f56fc5348",
        tree: (
            span: (
                start: 0,
                end: 13,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 13,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (LocalAssignment((
                        span: (
                            start: 0,
                            end: 12,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        id: (
                            span: (
                                start: 0,
                                end: 1,
                            ),
                            name: "a",
                        ),
                        ty: None,
                        expr: List((
                            span: (
                                start: 4,
                                end: 12,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            items: [
                                (
                                    span: (
                                        start: 5,
                                        end: 6,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: Literal((
                                        span: (
                                            start: 5,
                                            end: 6,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 5,
                                                end: 6,
                                            ),
                                            value: "1",
                                        )),
                                    )),
                                ),
                                (
                                    span: (
                                        start: 8,
                                        end: 9,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: Literal((
                                        span: (
                                            start: 8,
                                            end: 9,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 8,
                                                end: 9,
                                            ),
                                            value: "2",
                                        )),
                                    )),
                                ),
                            ],
                            unit: Some((
                                span: (
                                    start: 10,
                                    end: 12,
                                ),
                                name: "mm",
                            )),
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
