crates/lang-parse/tests/snapshots/parser__parser_marker.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 4879409065068372218,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 6,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 6,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [],
                    tail: Some((
                        span: (
                            start: 0,
                            end: 6,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: Marker((
                            span: (
                                start: 1,
                                end: 6,
                            ),
                            name: "input",
                        )),
                    )),
                ),
            ),
            hash: 17636052171756009112,
        ),
    ),
)
---
