crates/lang-parse/tests/snapshots/parser__parser_method call.snap
---
source: crates/lang-parse/tests/parser.rs
expression: parse(input)
---
Ok(
    Ast {
        span: 0..9,
        statements: StatementList {
            span: 0..9,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..9,
                    extras: ItemExtras {
                        leading: LeadingExtras(
                            [],
                        ),
                        trailing: TrailingExtras(
                            [],
                        ),
                    },
                    attr: [],
                    expr: ElementAccess(
                        ElementAccess {
                            span: 0..9,
                            expr: QualifiedName(
                                QualifiedName {
                                    span: 0..3,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    parts: [
                                        Identifier {
                                            span: 0..3,
                                            name: "foo",
                                        },
                                    ],
                                },
                            ),
                            element_chain: [
                                Element {
                                    span: 3..9,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    inner: Method(
                                        Call {
                                            span: 4..9,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            name: QualifiedName {
                                                span: 4..7,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                parts: [
                                                    Identifier {
                                                        span: 4..7,
                                                        name: "bar",
                                                    },
                                                ],
                                            },
                                            arguments: ArgumentList {
                                                span: 8..8,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                arguments: [],
                                            },
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
        },
    },
)
