crates/lang-parse/tests/snapshots/parser__parser_mod extern.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x56c7b8f18117ece4",
        output_hash: "0x3c1dd8eaf6419127",
        tree: (
            span: (
                start: 0,
                end: 8,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 8,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (FileModule((
                        span: (
                            start: 0,
                            end: 7,
                        ),
                        keyword_span: (
                            start: 0,
                            end: 3,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        doc: (
                            span: (
                                start: 0,
                                end: 8,
                            ),
                            lines: [],
                        ),
                        attr: ([]),
                        vis: None,
                        id: (
                            span: (
                                start: 4,
                                end: 7,
                            ),
                            name: "foo",
                        ),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
